feat: add missing models and middleware folders

--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@ document.addEventListener('DOMContentLoaded', function() {
           };
 
           // Enviar al backend
-          const API_BASE = 'http://localhost:3000/api';
+          const API_BASE = 'https://nabi-back.onrender.com/api';
           const response = await fetch(`${API_BASE}/pedidos`, {
             method: 'POST',
             headers: {
