--- a/nabi-frontend/index.html
+++ b/nabi-frontend/index.html
@@ -832,7 +832,7 @@
           console.log('🔴 [DEBUG] Datos del pedido:', body);
           
           // Enviar al backend
-          const API_BASE = 'https://nabi-back.onrender.com/api';
+          const API_BASE = 'https://nabi-back.onrender.com:10000/api/pedidos';
           const URL = `${API_BASE}/pedidos`;
           
           console.log('🔴 [DEBUG] URL de envío:', URL);
