Mejoras en index.html y cambios en backend

--- a/nabi-frontend/index.html
+++ b/nabi-frontend/index.html
@@ -677,7 +677,7 @@
             <label><i class="fas fa-truck"></i> Método de Entrega</label>
             <div class="delivery-options">
               <div class="delivery-option" data-value="recoger">Recoger</div>
-              <div class="delivery-option" data-value="punto">Entrega en Punto</div>
+              <div class="delivery-option" data-value="punto">Entrega en un Punto</div>
             </div>
             <input type="hidden" id="delivery" required>
           </div>
